compile_log.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:generateDebugRFile UP-TO-DATE
> Task :app:compileDebugKotlin NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
D:\Hoc_ky_6\Lap_trinh_di_dong_nang_cao\MyTaskList\app\src\main\java\hcmute\edu\vn\mytasklist\MainActivity.java:697: error: incompatible types: long cannot be converted to TaskEntity
                    taskViewModel.delete(task.getId());
                                                   ^
D:\Hoc_ky_6\Lap_trinh_di_dong_nang_cao\MyTaskList\app\src\main\java\hcmute\edu\vn\mytasklist\MainActivity.java:864: error: cannot find symbol
                return taskDao.getByDateRange(from, to);
                       ^
  symbol:   variable taskDao
  location: class MainActivity
D:\Hoc_ky_6\Lap_trinh_di_dong_nang_cao\MyTaskList\app\src\main\java\hcmute\edu\vn\mytasklist\MainActivity.java:869: error: cannot find symbol
                return taskDao.getByDateRange(from, c.getTime());
                       ^
  symbol:   variable taskDao
  location: class MainActivity
D:\Hoc_ky_6\Lap_trinh_di_dong_nang_cao\MyTaskList\app\src\main\java\hcmute\edu\vn\mytasklist\MainActivity.java:872: error: cannot find symbol
                return taskDao.getCompleted();
                       ^
  symbol:   variable taskDao
  location: class MainActivity
D:\Hoc_ky_6\Lap_trinh_di_dong_nang_cao\MyTaskList\app\src\main\java\hcmute\edu\vn\mytasklist\MainActivity.java:874: error: cannot find symbol
                return taskDao.getByCategory(currentFilter);
                       ^
  symbol:   variable taskDao
  location: class MainActivity
D:\Hoc_ky_6\Lap_trinh_di_dong_nang_cao\MyTaskList\app\src\main\java\hcmute\edu\vn\mytasklist\MainActivity.java:913: error: incompatible types: Long cannot be converted to Date
            cal.setTime(task.getDueDate());
                                       ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
6 errors

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///D:/Hoc_ky_6/Lap_trinh_di_dong_nang_cao/MyTaskList/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:deprecation for details.
  D:\Hoc_ky_6\Lap_trinh_di_dong_nang_cao\MyTaskList\app\src\main\java\hcmute\edu\vn\mytasklist\MainActivity.java:697: error: incompatible types: long cannot be converted to TaskEntity
                      taskViewModel.delete(task.getId());
                                                     ^
  D:\Hoc_ky_6\Lap_trinh_di_dong_nang_cao\MyTaskList\app\src\main\java\hcmute\edu\vn\mytasklist\MainActivity.java:913: error: incompatible types: Long cannot be converted to Date
              cal.setTime(task.getDueDate());
                                         ^
  D:\Hoc_ky_6\Lap_trinh_di_dong_nang_cao\MyTaskList\app\src\main\java\hcmute\edu\vn\mytasklist\MainActivity.java:864: error: cannot find symbol
                  return taskDao.getByDateRange(from, to);
                         ^
    symbol:   variable taskDao
    location: class MainActivity
  D:\Hoc_ky_6\Lap_trinh_di_dong_nang_cao\MyTaskList\app\src\main\java\hcmute\edu\vn\mytasklist\MainActivity.java:869: error: cannot find symbol
                  return taskDao.getByDateRange(from, c.getTime());
                         ^
    symbol:   variable taskDao
    location: class MainActivity
  D:\Hoc_ky_6\Lap_trinh_di_dong_nang_cao\MyTaskList\app\src\main\java\hcmute\edu\vn\mytasklist\MainActivity.java:872: error: cannot find symbol
                  return taskDao.getCompleted();
                         ^
    symbol:   variable taskDao
    location: class MainActivity
  D:\Hoc_ky_6\Lap_trinh_di_dong_nang_cao\MyTaskList\app\src\main\java\hcmute\edu\vn\mytasklist\MainActivity.java:874: error: cannot find symbol
                  return taskDao.getByCategory(currentFilter);
                         ^
    symbol:   variable taskDao
    location: class MainActivity
  Note: Some input files use or override a deprecated API.
  Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
  6 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 3s
7 actionable tasks: 1 executed, 6 up-to-date
